--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.bartoszlipinski.recyclerviewheader:library:1.2.0'
+    compile 'org.greenrobot:eventbus:3.0.0'
 }
