list中的数据能获取到了，主界面的popupwindow做了，还是有很多问题

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:icon="@mipmap/icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:name=".tool.volley.MyApp"
+        android:name=".tool.base.MyApp"
         android:theme="@style/CustomTitle">
         <activity android:name=".main.MainActivity">
             <intent-filter>
