本来可以播放音乐，后来不知道怎么又不行了。在想播放，下一首｀｀｀等按钮的逻辑传值。待续。。。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".play.PlayActivity">
 
         </activity>
+        <service android:name=".tool.widget.PlayerService"/>
     </application>
 
 </manifest>
