--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.bartoszlipinski.recyclerviewheader:library:1.2.0'
     compile 'org.greenrobot:eventbus:3.0.0'
+    compile files('libs/lite-orm-1.9.2.jar')
 }
